--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,13 @@
         <java.version>11</java.version>
     </properties>
 
-
     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
